--- a/src/app/components/resources/navbar/navbar.component.html
+++ b/src/app/components/resources/navbar/navbar.component.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" [routerLink]="['/create']">Crear<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active" *ngIf="isLogged()">
-                <a class="nav-link" href="/profile">Perfil<span class="sr-only">(current)</span></a>
+                <a class="nav-link" [routerLink]="['/profile']">Perfil<span class="sr-only">(current)</span></a>
             </li>
         </ul>
         <span class="navbar-text">
