--- a/src/app/components/routes/profile/profile.component.html
+++ b/src/app/components/routes/profile/profile.component.html
@@ -17,7 +17,7 @@
                     {{item['name']}}
                 </td>
                 <td>
-                    OPCIONES
+                    <a class="nav-link" [routerLink]="['/myevent', item['id']]">Ver</a>
                 </td>
             </tr>
         </tbody>
