--- a/src/app/components/routes/profile/profile.component.html
+++ b/src/app/components/routes/profile/profile.component.html
@@ -22,6 +22,8 @@
             </tr>
         </tbody>
     </table>
-    Estas limitado a 10 formularios por mes, hazte premium para poder crear formularios sin limites!
-    <a [routerLink]="['/premium']">Hacerme premium</a>
+    <div *ngIf="!this.premiumUser">
+        Estas limitado a 10 formularios por mes, hazte premium para poder crear formularios sin limites!
+        <a [routerLink]="['/premium']">Hacerme premium</a>
+    </div>
 </div>
