--- a/src/app/components/resources/navbar/navbar.component.html
+++ b/src/app/components/resources/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <li class="nav-item active">
                 <a class="nav-link" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active" *ngIf="isLogged()">
+            <li class="nav-item active">
                 <a class="nav-link" [routerLink]="['/create']">Crear<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active" *ngIf="isLogged()">
