--- a/src/app/components/routes/create/create.component.html
+++ b/src/app/components/routes/create/create.component.html
@@ -17,39 +17,6 @@
       <input type="text" class="form-control" id="description" placeholder="Ingresar descripcion"
         formControlName="description">
     </div>
-    <div class="input-wrapper">
-      <label>Date Time:</label>
-      <input formControlName="date" [owlDateTimeTrigger]="dtPicker2" [owlDateTime]="dtPicker2" [selectMode]="'range'">
-      <owl-date-time #dtPicker2></owl-date-time>
-    </div>
-    <input (click)="addDate(createForm.value.date)" type="button" value="agregar">
-    <p id="datepicker" class="text-danger d-none">Debe seleccionar una fecha correcta</p>
-    <table class="table">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Comienza</th>
-          <th scope="col">Termina</th>
-          <th scope="col">Acciones</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let item of createForm.value.dates; index as i">
-          <td>
-            {{i+1}}
-          </td>
-          <td>
-            {{convertDate(item[0])}}
-          </td>
-          <td>
-            {{convertDate(item[1])}}
-          </td>
-          <td>
-            <i class="fas fa-trash iconColor" (click)="removeDate(i)"></i>
-          </td>
-        </tr>
-      </tbody>
-    </table>
     <p id="datearray" class="text-danger d-none">Debe agregar al menos una fecha</p>
     <div class="form-group">
       <label for="password">Password de acceso:</label>
@@ -72,6 +39,42 @@
     </div>
     <button type="button" class="btn btn-primary" [disabled]="createForm.invalid" (click)="theSubmit()">Submit</button>
   </form>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="btn-group">
+        <div class="btn btn-primary" mwlCalendarPreviousView [view]="'week'" [(viewDate)]="viewDate">
+          Previous
+        </div>
+        <div class="btn btn-outline-secondary" mwlCalendarToday [(viewDate)]="viewDate">
+          Today
+        </div>
+        <div class="btn btn-primary" mwlCalendarNextView [view]="'week'" [(viewDate)]="viewDate">
+          Next
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 text-right">
+      <h3>{{ viewDate | calendarDate:('weekViewTitle') }}</h3>
+    </div>
+  </div>
+  <br />
+  <div class="container overflow-auto h-25">
+    <ng-template #weekViewHourSegmentTemplate let-segment="segment" let-locale="locale"
+      let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
+      <div #segmentElement class="cal-hour-segment" [style.height.px]="segmentHeight"
+        [class.cal-hour-start]="segment.isStart" [class.cal-after-hour-start]="!segment.isStart"
+        [ngClass]="segment.cssClass" (mousedown)="startDragToCreate(segment, $event, segmentElement)">
+        <div class="cal-time" *ngIf="isTimeLabel">
+          {{ segment.date | calendarDate:'weekViewHour':locale }}
+        </div>
+      </div>
+    </ng-template>
+
+    <mwl-calendar-week-view [viewDate]="viewDate" [events]="events" [hourSegmentTemplate]="weekViewHourSegmentTemplate"
+      [weekStartsOn]="weekStartsOn">
+    </mwl-calendar-week-view>
+  </div>
+
 </div>
 <app-created *ngIf="this.created && !this.exceeded" [eventCreated]="eventCreated"></app-created>
 <div *ngIf="this.exceeded" class="text-danger">Ya excediste la cantidad maxima(10) de formularios por mes</div>
