--- a/src/app/components/routes/event/results/results.component.html
+++ b/src/app/components/routes/event/results/results.component.html
@@ -5,7 +5,7 @@
     <ul class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-center"
             *ngFor="let item of this.event['dates']; index as i">
-            La fecha: {{convertDate(item[0])}} >> {{convertDate(item[1])}} fue elegida {{this.resultados[i]}} veces
+            La fecha: {{item['id']}} >> {{convertDate(item[1])}} fue elegida {{this.resultados[i]}} veces
         </li>
     </ul>
 </div>
