--- a/src/app/components/routes/event/results/results.component.html
+++ b/src/app/components/routes/event/results/results.component.html
@@ -1,11 +1,6 @@
-<div class="container" *ngIf="this.noResponses">
+<div id="noresponses" class="container d-none">
     No hay respuestas aun
 </div>
-<div class="container" *ngIf="!this.noResponses">
-    <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center"
-            *ngFor="let item of this.event['dates']; index as i">
-            La fecha: {{item['id']}} >> {{convertDate(item[1])}} fue elegida {{this.resultados[i]}} veces
-        </li>
-    </ul>
+<div id="responses" class="container d-none">
+    <canvas id="myChart"></canvas>
 </div>
