--- a/src/app/components/routes/event/results/results.component.html
+++ b/src/app/components/routes/event/results/results.component.html
@@ -2,5 +2,5 @@
     No hay respuestas aun
 </div>
 <div id="responses" class="container d-none">
-    <canvas id="myChart"></canvas>
+    <canvas id="myChart" width="100px" height="100px"></canvas>
 </div>
