navbar mobile fixed & login styled

--- a/src/app/components/resources/navbar/navbar.component.css
+++ b/src/app/components/resources/navbar/navbar.component.css
@@ -148,3 +148,12 @@ i {
         left: -25px
     }
 }
+
+@media (min-width: 991px) {
+    .maright {
+        margin-right: 1.5rem;
+    }
+    .maleft {
+        margin-left: 1.5rem!important;
+    }
+}
