--- a/src/app/components/resources/navbar/navbar.component.html
+++ b/src/app/components/resources/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-mainbg">
     <a class="navbar-brand navbar-logo" [routerLink]="['/']">Meet-O-Matic</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" (click)="load()">
         <i class="fa fa-bars text-white"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-4">
+        <ul class="navbar-nav maleft">
             <div class="hori-selector">
                 <div class="left"></div>
                 <div class="right"></div>
@@ -24,7 +24,7 @@
             <li class="nav-item" *ngIf="!isLogged()" [ngClass]="{'active' : isActive('/login')}">
                 <a class="nav-link" [routerLink]="['/login']"><i class="fas fa-sign-in-alt"></i>Login</a>
             </li>
-            <li class="nav-item mr-4" *ngIf="!isLogged()" [ngClass]="{'active' : isActive('/signup')}">
+            <li class="nav-item maright" *ngIf="!isLogged()" [ngClass]="{'active' : isActive('/signup')}">
                 <a class="nav-link" [routerLink]="['/signup']"><i class="fas fa-user-plus"></i>SignUp</a>
             </li>
         </ul>
