--- a/src/app/components/routes/login/login.component.html
+++ b/src/app/components/routes/login/login.component.html
@@ -1,14 +1,23 @@
-<div class="container">
-    <form class="col-sm-6" [formGroup]="loginForm">
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" placeholder="Ingresa email" formControlName="email">
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6 relative align-self-center">
+            <form class="bg-white pb_form_v1" [formGroup]="loginForm">
+                <h3 class="mb-4 mt-0 text-center">Completá los campos</h3>
+                <div class="form-group">
+                    <input type="email" class="form-control pb_height-50 reverse" id="email" placeholder="Email"
+                        formControlName="email">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control pb_height-50 reverse" placeholder="Contraseña" id="password"
+                        formControlName="password">
+                </div>
+                <div class="form-group">
+                    <input type="submit" class="btn btn-primary btn-lg btn-block pb_btn-pill  btn-shadow-blue"
+                        value="Iniciar sesión" [disabled]="!loginForm.valid" (click)="login()">
+                </div>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="password">Contraseña</label>
-            <input type="password" class="form-control" id="password" placeholder="Ingresar contraseña"
-                formControlName="password">
-        </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid" (click)="login()">Submit</button>
-    </form>
+        <div class="col-md-3"></div>
+    </div>
 </div>
