--- a/src/app/components/routes/login/login.component.html
+++ b/src/app/components/routes/login/login.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="form-group">
                     <input type="password" class="form-control pb_height-50 reverse" placeholder="Contraseña" id="password"
-                        formControlName="password">
+                        formControlName="password" autocomplete="on">
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary btn-lg btn-block pb_btn-pill  btn-shadow-blue"
