--- a/src/app/components/routes/login/login.component.html
+++ b/src/app/components/routes/login/login.component.html
@@ -1,20 +1,45 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-3"></div>
-        <div class="col-md-6 relative align-self-center">
+        <div class="col-md-6">
             <form class="bg-white pb_form_v1" [formGroup]="loginForm">
                 <h3 class="mb-4 mt-0 text-center">Completá los campos</h3>
-                <div class="form-group">
+                <div class="alert alert-danger text-center mb-4" role="alert" *ngIf="this.wrong">
+                    Credenciales incorrectas
+                </div>
+                <div class="form-group mb-1">
                     <input type="email" class="form-control pb_height-50 reverse" id="email" placeholder="Email"
-                        formControlName="email">
+                        formControlName="email" (input)="remo()">
                 </div>
-                <div class="form-group">
-                    <input type="password" class="form-control pb_height-50 reverse" placeholder="Contraseña" id="password"
-                        formControlName="password" autocomplete="on">
+                <div *ngIf="loginForm.get('email').invalid && loginForm.get('email').touched">
+                    <p>
+                        <small class="text-danger font-italic">
+                            Formato incorrecto
+                        </small>
+                    </p>
                 </div>
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary btn-lg btn-block pb_btn-pill  btn-shadow-blue"
-                        value="Iniciar sesión" [disabled]="!loginForm.valid" (click)="login()">
+                <div class="form-group mb-1 mt-4">
+                    <input type="password" class="form-control pb_height-50 reverse" placeholder="Contraseña"
+                        id="password" formControlName="password" autocomplete="on">
+                </div>
+                <div *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched">
+                    <p>
+                        <small class="text-danger font-italic">
+                            La contraseña debe tener al menos 8 caracteres
+                        </small>
+                    </p>
+                </div>
+                <div class="form-group mt-5">
+                    <button type="submit" class="btn btn-lg btn-block pb_btn-pill  btn-shadow-blue" (click)="login()"
+                        [disabled]="!loginForm.valid || this.loading"
+                        [ngClass]="(!this.logged)?'btn-primary':'btn-success'">
+                        <span *ngIf="!this.loading && !this.logged">Iniciar sesión</span>
+                        <div class="spinner-border text-dark" role="status" *ngIf="this.loading"></div>
+                        <span *ngIf="this.logged">¡Bienvenido!</span>
+                    </button>
+                </div>
+                <div class="text-center">
+                    <small id="countdown" class="font-italic"></small>
                 </div>
             </form>
         </div>
