--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
+/* GLOBAL */
+
+/* Initial config */
+
 @media (min-width: 992px) {
-    .bodyw {
+    body {
         width: 80%;
         margin: auto;
     }
@@ -8,4 +12,48 @@
 body {
     background-color: #F2F4F9;
     font-family: "Montserrat", Arial, sans-serif;
+}
+
+/* Forms */
+
+.pb_form_v1 {
+    padding: 50px;
+    -webkit-box-shadow: 1px 11px 68px -20px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 1px 11px 68px -20px rgba(0, 0, 0, 0.75);
+    box-shadow: 1px 11px 68px -20px rgba(0, 0, 0, 0.75);
+}
+
+@media (max-width: 991px) {
+    .pb_form_v1 {
+        padding: 30px;
+    }
+}
+
+.pb_height-50 {
+    height: 50px;
+}
+
+.form-control.reverse {
+    background: #f2f2f2;
+    -webkit-transition: .3s all ease;
+    -o-transition: .3s all ease;
+    transition: .3s all ease;
+    border-color: #f2f2f2;
+}
+
+.form-control.reverse:focus, .form-control.reverse:active {
+    background: none;
+    border-color: #1d82ff !important;
+}
+
+.pb_btn-pill {
+    border-radius: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.btn-shadow-blue {
+    -webkit-box-shadow: 0px 15px 28px -5px rgba(29, 130, 255, 0.45);
+    -moz-box-shadow: 0px 15px 28px -5px rgba(29, 130, 255, 0.45);
+    box-shadow: 0px 15px 28px -5px rgba(29, 130, 255, 0.45);
 }
