--- a/src/app/components/resources/navbar/navbar.component.html
+++ b/src/app/components/resources/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-mainbg">
+<nav class="navbar navbar-expand-lg navbar-mainbg mb-5">
     <a class="navbar-brand navbar-logo" [routerLink]="['/']">Meet-O-Matic</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" (click)="load()">
