--- a/src/app/components/routes/create/created/created.component.html
+++ b/src/app/components/routes/create/created/created.component.html
@@ -1,7 +1,23 @@
-<div class="container" *ngIf="this.eventCreated != null"> <!--Evitamos que al primer pintado encuentre undefined-->
-    <h2>Evento creado exitosamente</h2>
-    <h5>Puede compartir el siguiente link: </h5>
-    <a href="/myevent/{{this.eventCreated['id']}}">Este link</a>
-    <h5>Con la siguiente contraseña:</h5>
-    <p>{{this.eventCreated['password']}}</p>
+<div class="container w-75" *ngIf="this.eventCreated != null"><!--Evitamos que al primer pintado encuentre undefined-->
+    <div class="card text-center">
+        <div class="card-header cardtopbot">
+            Información de tu evento
+        </div>
+        <div class="card-body cardmid">
+            <h5 class="card-title">Compartí el siguiente link a tus contactos</h5>
+            <input type="text" class="w-75" disabled value="{{this.eventUrl()}}">
+            <p class="card-text mt-3">Con la siguiente contraseña: <span
+                    class="font-weight-bold">{{this.eventCreated['password']}}</span></p>
+            <h5 class="card-title">Con el siguiente link podrás ver los resultados</h5>
+            <input type="text" class="w-75" disabled value="{{this.resultEventUrl()}}">
+            <p>
+                <small class="text-dark font-italic font-weight-bold">
+                    *No pierdas ni compartas el link
+                </small>
+            </p>
+        </div>
+        <div class="card-footer text-muted cardtopbot">
+            Gracias por usar nuestro sitio
+        </div>
+    </div>
 </div>
