--- a/src/app/components/routes/create/create.component.html
+++ b/src/app/components/routes/create/create.component.html
@@ -68,7 +68,7 @@
         </div>
       </form>
       <div class="col-md-8 bg-white">
-        <div class="row">
+        <div class="row col-md-12 p-0">
           <h4 class="font-weight-bold text-center">
             Seleccioná las fechas:
           </h4>
@@ -86,7 +86,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row col-md-12 p-0">
           <div class="overflow-auto col-md-12 p-0">
             <ng-template #weekViewHourSegmentTemplate let-segment="segment" let-locale="locale"
               let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
