--- a/src/app/components/resources/navbar/navbar.component.html
+++ b/src/app/components/resources/navbar/navbar.component.html
@@ -27,6 +27,9 @@
             <li class="nav-item maright" *ngIf="!isLogged()" [ngClass]="{'active' : isActive('/signup')}">
                 <a class="nav-link" [routerLink]="['/signup']"><i class="fas fa-user-plus"></i>SignUp</a>
             </li>
+            <li class="nav-item maright" *ngIf="isLogged()">
+                <a type="button" class="nav-link" (click)="logout()"><i class="fas fa-user-plus"></i>Logout</a>
+            </li>
         </ul>
         
     </div>
