--- a/src/app/components/routes/notfound/notfound.component.html
+++ b/src/app/components/routes/notfound/notfound.component.html
@@ -1,1 +1,9 @@
-<p>La pagina no existe</p>
+<div id="notfound">
+    <div class="notfound">
+        <div class="notfound-404"></div>
+        <h1>404</h1>
+        <h2>Oops! La pagina no existe</h2>
+        <p>La pagina que intentas visitar no existe, fue eliminada o esta temporalmente deshabilitada.</p>
+        <a [routerLink]="['/']">Volver al inicio</a>
+    </div>
+</div>
